style level-one home page div

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div class="container-fluid d-flex align-items-center justify-content-center p-0 text-white wow animate__rotateIn" id="header-wrapper-div" data-wow-duration="6s">
+    <div class="container-fluid d-flex align-items-center justify-content-center p-0 text-white wow animate__rotateIn" id="header-wrapper-div" >
       <div class="row text-center w-100" id="header-row-div">
         <div class="col-md-2 d-none d-md-flex align-items-center wow animate__fadeInLeft" data-wow-duration="8s">
           <p></p>
@@ -67,6 +67,35 @@
     </ul>
   </div>
 </nav>
+
+<div class="container my-5" id="home-level-one">
+  <h1 class="d-none d-md-block text-center py-5">
+    We deploy world-class agile product teams on demand. Teams that can design, build, ship and scale your <br>web application in the most efficient way. 
+  </h1>
+  <h4 class="d-md-none text-center py-5">
+    We deploy world-class agile product teams on demand. Teams that can design, build, ship and scale your <br>web application in the most efficient way. 
+  </h4>
+  <p class="text-center"><i class="far fa-eye wow animate__flash" data-wow-duration="3s" data-wow-iteration="infinite"></i><a id="shift-up-link" class="links-general-slide-right d-inline-block" href="#">Take a look at our servives.</a><p>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-6"></div>
+    <div class="col-md-6">
+      <div id="home-page-service-1">
+        <div class="home-page-service-content d-flex justify-content-center align-items-center h-100">
+          <h3>Ideation</h3>
+        </div>
+      </div>
+      <div id="home-page-service-2"></div>
+      <div id="home-page-service-3"></div>
+      <div id="home-page-service-4"></div>
+      <div id="home-page-service-5"></div>
+
+    </div>
+
+  </div>
+</div>
 
 
 
