--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <!-- Animated cdd -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+       <!-- owl carousel -->
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
   </head>
 
   <body>
@@ -22,7 +25,7 @@
         <div class="col-md-2 d-none d-md-flex align-items-center wow animate__fadeInLeft" data-wow-duration="8s">
           <p></p>
         </div>
-        <div class="col-md-3 mb-5 wow animate__swing" data-wow-duration="3s" data-wow-iteration="infinite" id="header-photo-div">
+        <div class="col-8 mx-auto col-md-3 mb-5 wow animate__swing" data-wow-duration="3s" data-wow-iteration="infinite" id="header-photo-div">
           <img class="img-fluid" src="https://res.cloudinary.com/it-s-tech/image/upload/v1590113436/favicon-no-background_zfff9h_1_1_xxhedh.png">
         </div>
         <div class="col-md-4 anime-move-up wow animate__zoomIn" data-wow-duration="10s" >
@@ -38,64 +41,206 @@
     </div>
 
     <nav class="navbar navbar-expand-md sticky-top" >
-  <a class="navbar-brand" href="/"><img src="https://res.cloudinary.com/it-s-tech/image/upload/v1590111527/black-background-white_tbt6jx_1_ozluqe.png"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-    <span class="navbar-toggler-icon"><i class="fas fa-sliders-h text-white"></i></span>
-  </button>
+      <a class="navbar-brand" href="/"><img src="https://res.cloudinary.com/it-s-tech/image/upload/v1590111527/black-background-white_tbt6jx_1_ozluqe.png"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+        <span class="navbar-toggler-icon"><i class="fas fa-sliders-h text-white"></i></span>
+      </button>
 
-  <div class="collapse navbar-collapse" id="navbarResponsive">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a href="/" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item">
-        <a href="/pages/about" class="nav-link">About</a>
-      </li>
-      <li class="nav-item">
-       <a href="/pages/catalog" class="nav-link">Catalog</a>
-      </li>
-      <li class="nav-item">
-        <a href="/pages/commission" class="nav-link">Commission</a>
-      </li>
-      <li class="nav-item">
-        <a href="/pages/faq" class="nav-link">FAQ</a>
-      </li>
-      <li class="nav-item">
-        <a href="/pages/pricing" class="nav-link">Pricing</a>
-      </li>
-             
-    </ul>
-  </div>
-</nav>
-
-<div class="container my-5" id="home-level-one">
-  <h1 class="d-none d-md-block text-center py-5">
-    We deploy world-class agile product teams on demand. Teams that can design, build, ship and scale your <br>web application in the most efficient way. 
-  </h1>
-  <h4 class="d-md-none text-center py-5">
-    We deploy world-class agile product teams on demand. Teams that can design, build, ship and scale your <br>web application in the most efficient way. 
-  </h4>
-  <p class="text-center"><i class="far fa-eye wow animate__flash" data-wow-duration="3s" data-wow-iteration="infinite"></i><a id="shift-up-link" class="links-general-slide-right d-inline-block" href="#">Take a look at our servives.</a><p>
-</div>
-
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-6"></div>
-    <div class="col-md-6">
-      <div id="home-page-service-1">
-        <div class="home-page-service-content d-flex justify-content-center align-items-center h-100">
-          <h3>Ideation</h3>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="/" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="/pages/about" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+           <a href="/pages/catalog" class="nav-link">Catalog</a>
+          </li>
+          <li class="nav-item">
+            <a href="/pages/commission" class="nav-link">Commission</a>
+          </li>
+          <li class="nav-item">
+            <a href="/pages/faq" class="nav-link">FAQ</a>
+          </li>
+          <li class="nav-item">
+            <a href="/pages/pricing" class="nav-link">Pricing</a>
+          </li>
+                 
+        </ul>
       </div>
-      <div id="home-page-service-2"></div>
-      <div id="home-page-service-3"></div>
-      <div id="home-page-service-4"></div>
-      <div id="home-page-service-5"></div>
+    </nav>
 
+    <div class="container my-5" id="home-level-one">
+      <h1 class="d-none d-md-block text-center py-5">
+        We deploy world-class agile product teams on demand. Teams that can design, build, ship and scale your <br>web application in the most efficient way. 
+      </h1>
+      <h4 class="d-md-none text-center py-5">
+        We deploy world-class agile product teams on demand. Teams that can design, build, ship and scale your <br>web application in the most efficient way. 
+      </h4>
+      <p class="text-center"><i class="far fa-eye wow animate__flash" data-wow-duration="3s" data-wow-iteration="infinite"></i><a id="shift-up-link" class="links-general-slide-right d-inline-block" href="#">Take a look at our services.</a><p>
     </div>
 
+    <section id="numbers" class="my-5">
+      <div class="container text-center">
+        <div class="header text-center">
+          <h1><strong>Numbers Never Lie</strong></h1>
+          <div class="header-underline"></div>
+          <p class="">More than 5 years in the game and we're just getting started. </p>
+        </div>
+        <div class="row">
+          <div class="col-4">
+            <i class="fa fa-users"></i>
+            <h3 class="d-none d-md-block">Clients</h3>
+            <h6 class="d-md-none">Clients</h6>
+            <h1><span class='numscroller' data-min='1' data-max='25' data-delay='50' data-increment='1'>25</span></h1>
+          </div>
+
+          <div class="col-4">
+            <i class="fa fa-envelope"></i>
+            <h3 class="d-none d-md-block">Experience</h3>
+            <h6 class="d-md-none">Experience</h6>
+            <h1><span class='numscroller' data-min='1' data-max='5' data-delay='20' data-increment='1'>5 years</span></h1>
+          </div>
+
+          <div class="col-4">
+            <i class="fa fa-archive"></i>
+            <h3 class="d-none d-md-block">Projects</h3>
+            <h6 class="d-md-none">Projects</h6>
+            <h1><span class='numscroller' data-min='1' data-max='45' data-delay='100' data-increment='1'>45</span></h1>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="container-fluid" id="home-level-two">
+      <div class="row">
+        <div class="col-md-6 d-flex justify-content-center align-items-center">
+          <div>
+            <h1 class="text-center">Experts in every aspect of the product lifecycle</h1>
+            <p class="text-center genral-font-color">Whether you're a Fortune 500 or a startup in stealth mode - we give our clients the creative, technical and business talent they need to succeed.</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div id="home-page-service-1">
+            <div class="home-page-service-content d-flex justify-content-center align-items-center h-100">
+              <a class="links-general-slide-right text-center" href="#"><h3>Ideation And Evaluation</h3></a>
+            </div>
+          </div>
+          <div id="home-page-service-2">
+            <div class="home-page-service-content d-flex justify-content-center align-items-center h-100">
+              <a class="links-general-slide-right" href="#"><h3>Product Design</h3></a>
+            </div>
+          </div>
+          <div id="home-page-service-3">
+            <div class="home-page-service-content d-flex justify-content-center align-items-center h-100">
+              <a class="links-general-slide-right" href="#"><h3>Web Development</h3></a>
+            </div>
+          </div>
+          <div id="home-page-service-4">
+            <div class="home-page-service-content d-flex justify-content-center align-items-center h-100">
+              <a class="links-general-slide-right" href="#"><h3>Mobile Development</h3></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <section class="py-5" id="clients">
+      <div class="container py-5">
+        <div class="header text-center py-5">
+          <h2>Our Technology</h2>
+          <div class="header-underline"></div>
+          <p class="text-muted">We give you the best out of the latest technologies</p>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div id="logo" class="owl-carousel owl-theme">
+
+              <div class="logos">
+                <div><img src="https://res.cloudinary.com/it-s-tech/image/upload/v1590289449/WordPress-logotype-alternative_bknnst.png" class="img-fluid"></div>
+              </div>
+              <div class="logos">
+                <div><img src="https://res.cloudinary.com/it-s-tech/image/upload/v1580503407/kisspng-ruby-on-rails-logo-computer-programming-programmin-rails-5ac5a0cee22610.3850994615229011989263_xlrpze.png" class="img-fluid"></div>
+              </div>
+              <div class="logos">
+                <div><img src="https://res.cloudinary.com/it-s-tech/image/upload/v1580503407/kisspng-web-development-responsive-web-design-advanced-css-5b1e73aae576a6.4591989815287223469399_ckamqv.png" class="img-fluid"></div>
+              </div>
+              <div class="logos">
+                <div><img src="https://res.cloudinary.com/it-s-tech/image/upload/v1580503407/kisspng-ruby-on-rails-logo-software-framework-unicorn-ruby-on-rails-5-5b804d22f3d271.6421905815351350109987_db6tis.png" class="img-fluid"></div>
+              </div>
+              <div class="logos">
+                <div><img src="https://res.cloudinary.com/it-s-tech/image/upload/v1580503406/kisspng-javascript-logo-html-comment-blog-5ae63c23139110.5436874015250381150802_azwjln.png" class="img-fluid"></div>
+              </div>
+              <div class="logos">
+                <div><img src="https://res.cloudinary.com/it-s-tech/image/upload/v1580503406/kisspng-react-javascript-responsive-web-design-github-angu-github-5accac250cda95.4452823815233628530527_k9yekx.png" class="img-fluid"></div>
+              </div>
+              <div class="logos">
+                <div><img src="https://res.cloudinary.com/it-s-tech/image/upload/v1580503406/kisspng-css3-cascading-style-sheets-logo-html-logo-5abbf51be97508.5403277715222674199563_pvmc69.png" class="img-fluid"></div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="container-fluid py-5 text-center text-white" id="home-level-three">
+      <h3>Tells us about your website</h3>
+      <a class="background-button-link d-inline-block mt-4" href="#">Request</a>
+    </div>
+
+    <div class="container py-5" id="home-level-four">
+      <p class="text-center genral-font-color">
+        Group-itstech builds softwares that lets people do things differently. Share your challenge <br>with our team and we’ll work with you to deliver a revolutionary digital product.
+      </p>
+    </div>
+
+    <section id="quotes">
+  <div class="quotes-background py-5">
+    <div class="container">
+      <div class="header text-center">
+        <h1><strong>What They Say</strong></h1>
+        <div class="header-underline"></div>
+        <p class="">Let others speak for us</p>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div id="customers" class="owl-carousel owl-theme">
+
+            <div class="customer text-center">
+              <img src="https://res.cloudinary.com/it-s-tech/image/upload/v1590291042/IMG-20200130-WA0004_z9j2gn_1_gum4pm.jpg" class="img-fluid rounded-circle img-thumbnail" alt="trump" style="display: inline;">
+              <blockquote>
+                <i class="fa fa-quote-left"></i>
+                The best agency we’ve worked with so far. Group-itstech understands our product and is able to add new features with a great focus on speed to market.
+                <footer class="heading-standout">Geneve Kofi / CEO of Kabin</footer>
+              </blockquote>
+            </div>
+            <div class="customer text-center">
+              <img src="https://res.cloudinary.com/it-s-tech/image/upload/v1590291043/DSC_0318xxxxxx_nuze7h_1_mdrzwx.jpg" class="img-fluid rounded-circle img-thumbnail" alt="trump" style="display: inline;">
+              <blockquote>
+                <i class="fa fa-quote-left"></i>
+                I’ve had a long-lasting partnership with Group-itstech. They always try to make things possible.
+                <footer>King Onesimus / founder of Juicii shop</footer>
+              </blockquote>
+            </div>
+            <div class="customer text-center">
+              <img src="https://res.cloudinary.com/it-s-tech/image/upload/v1590291043/IMG-20200130-WA0009_mgkf9p_1_iunlre.jpg" class="img-fluid rounded-circle img-thumbnail" alt="trump" style="display: inline;">
+              <blockquote>
+                <i class="fa fa-quote-left"></i>
+                I really appreciate that you take ownership, you're experienced and that we can rely on you. I’m happy to say that so far it has worked out tremendously well for solarisBank.
+                <footer>Mbake  Elias / Affiliate marketer</footer>
+              </blockquote>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+</section>
+
+
 
 
 
@@ -108,5 +253,11 @@
     <script>
       new WOW().init()
     </script>
+    <!-- owl carousel -->
+     <script src="js/owl.carousel.js"></script>
+      <!-- numScroller -->
+    <script src="js/numscroller-1.0.js"></script>
+
+    <script src="js/script.js"></script>
   </body>
   </html>
