--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href="/" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="/pages/about" class="nav-link">About</a>
+            <a href="./about" class="nav-link">About</a>
           </li>
           <li class="nav-item">
            <a href="/pages/catalog" class="nav-link">Catalog</a>
