add mobile phone development

--- a/services.html
+++ b/services.html
@@ -65,14 +65,41 @@
   			<div class="col-md-6">
   				<img class="img-responsive" src="https://res.cloudinary.com/it-s-tech/image/upload/v1593506425/Group-Itstech/apple-laptop-notebook-office-39284_q9oxkz.jpg" style="width: 100%;">
   			</div>
-  			<div class="col-md-6 pt-4">
+  			<div class="col-md-6 py-4">
   				<h1 class="heading-standout">Web Application Development</h1>
-  				<p>Partner with a software development services company that values your project ideas as much as you do. Let’s work together to:</p>
+  				<p class="genral-font-color">Partner with a software development services company that values your project ideas as much as you do. Let’s work together to:</p>
   				<p class="blue-text border-bottom py-3">Enhance your users’ experience with secure cloud-based applications.</p>
   				<p class="blue-text border-bottom py-3">Ensure your software scales along with you by tapping into front and back-end technology.</p>
-  				<p>Whether you’re planning to build something from the ground up, need support with your in-house development, or are trying to maintain an existing application, our dedicated development teams are here to help you.</p>
+  				<p class="genral-font-color">Whether you’re planning to build something from the ground up, need support with your in-house development, or are trying to maintain an existing application, our dedicated development teams are here to help you.</p>
   				<a class="links-general-slide-right blue-button" href="#">EXPLORE EXISTING PROJECTS</a>
   			</div>
+  			<div class="col-md-6 d-md-none">
+  				<img class="img-responsive" src="https://res.cloudinary.com/it-s-tech/image/upload/v1593506426/Group-Itstech/google-search-engine-on-macbook-pro-40185_fnkmjk.jpg" style="width: 100%;">
+  			</div>
+  			<div class="col-md-6 d-flex align-items-center mb-4">
+  				<div>
+  					<h2 class="heading-standout">Website Development</h2>
+	  				<p class="genral-font-color">Engage your audience with a website that reflects your company’s vision and expertise. We work alongside you, adapting each project to your specific business requirements.</p>
+	  				<p class="genral-font-color">Whether you need out-of-the-box Open Source CMS solutions or custom- built web development services, our expert designers, developers, and marketers will bring vitality to your online presence.</p>
+	  				<a class="links-general-slide-right blue-button" href="#">EXPLORE EXISTING PROJECTS</a>
+  				</div>				
+  			</div>
+  			<div class="col-md-6 d-none d-md-block mb-4">
+  				<img class="img-responsive" src="https://res.cloudinary.com/it-s-tech/image/upload/v1593506426/Group-Itstech/google-search-engine-on-macbook-pro-40185_fnkmjk.jpg" style="width: 100%;">
+  			</div>
+  			<div class="col-md-6">
+  				<img class="img-responsive" src="https://res.cloudinary.com/it-s-tech/image/upload/v1593508292/Group-Itstech/person-writing-on-white-paper-3815585_ulks7n.jpg" style="width: 100%;">
+  			</div>
+  			<div class="col-md-6 d-flex align-items-center mb-4">
+  				<div>
+  					<h2 class="heading-standout">Mobile App Development</h2>
+  					<p>Unlock more doors and reach larger audiences by making your application more accessible. Our custom mobile software development solutions give users more flexibility to enter an app from the touch of a pocket-sized screen – no matter their location, no matter the time.</p>
+  					<p>iOS or Android, 3d technology, or natural language processing, augmented reality or customized communication services…you name what you’re looking for, we know how to help you.</p>
+  					<p>Work with Scopic to reshape your clients’ expectations.</p>
+  					<a class="links-general-slide-right blue-button" href="#">EXPLORE EXISTING PROJECTS</a>
+  				</div>
+  			</div>
+
   		</div>
   	</div>
 	  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
