add ux ui section

--- a/services.html
+++ b/services.html
@@ -93,13 +93,32 @@
   			<div class="col-md-6 d-flex align-items-center mb-4">
   				<div>
   					<h2 class="heading-standout">Mobile App Development</h2>
-  					<p>Unlock more doors and reach larger audiences by making your application more accessible. Our custom mobile software development solutions give users more flexibility to enter an app from the touch of a pocket-sized screen – no matter their location, no matter the time.</p>
-  					<p>iOS or Android, 3d technology, or natural language processing, augmented reality or customized communication services…you name what you’re looking for, we know how to help you.</p>
-  					<p>Work with Scopic to reshape your clients’ expectations.</p>
+  					<p class="genral-font-color">Unlock more doors and reach larger audiences by making your application more accessible. Our custom mobile software development solutions give users more flexibility to enter an app from the touch of a pocket-sized screen – no matter their location, no matter the time.</p>
+  					<p class="genral-font-color">iOS or Android, 3d technology, or natural language processing, augmented reality or customized communication services…you name what you’re looking for, we know how to help you.</p>
+  					<p class="genral-font-color">Work with Scopic to reshape your clients’ expectations.</p>
   					<a class="links-general-slide-right blue-button" href="#">EXPLORE EXISTING PROJECTS</a>
   				</div>
   			</div>
+  			<div class="col-md-6 d-md-none">
+  				<img class="img-responsive" src="https://res.cloudinary.com/it-s-tech/image/upload/v1593506422/Group-Itstech/fashion-art-coffee-macbook-pro-57690_a7c0i2.jpg" style="width: 100%;">
+  			</div>
+  			<div class="col-md-6 d-flex align-items-center mb-4">
+  				<div>
+  					<h2 class="heading-standout pt-4">UI/UX Design</h2>
+	  				<p class="genral-font-color">Simplify your users’ experience and maximize usability by partnering with a software development services company that knows how to impact your target audience. Our professional UI/UX designers are trained in the art of creating simplistic, intuitive design that’s easy to navigate and effortless to understand.</p>
+	  				<p class="genral-font-color">Anticipate your users’ next move and make your application interface eye- catchingly memorable. First we plan the architecture, then we create the user roadmap, before breathing life into the visuals.</p>
+	  				<p class="genral-font-color">UI/UX Design services – mapped out with creativity, executed with professionalism to exceed your business goals.</p>
+	  				<a class="links-general-slide-right blue-button" href="#">EXPLORE EXISTING PROJECTS</a>
+  				</div>				
+  			</div>
+  			<div class="col-md-6 d-none d-md-block">
+  				<img class="img-responsive" src="https://res.cloudinary.com/it-s-tech/image/upload/v1593506422/Group-Itstech/fashion-art-coffee-macbook-pro-57690_a7c0i2.jpg" style="width: 100%;">
+  			</div>
 
+  			<div class="col-md-6">
+  				<img class="img-responsive" src="https://res.cloudinary.com/it-s-tech/image/upload/v1593509237/Group-Itstech/apps-blur-button-close-up-267350_qxoa0l.jpg" style="width: 100%;">
+  			</div>
+  			
   		</div>
   	</div>
 	  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
