add digital marketing section

--- a/services.html
+++ b/services.html
@@ -118,7 +118,16 @@
   			<div class="col-md-6">
   				<img class="img-responsive" src="https://res.cloudinary.com/it-s-tech/image/upload/v1593509237/Group-Itstech/apps-blur-button-close-up-267350_qxoa0l.jpg" style="width: 100%;">
   			</div>
-  			
+  			<div class="col-md-6 d-flex align-items-center mb-4">
+  				<div>
+  					<h2 class="pt-4">Digital Marketing</h2>
+	  				<p class="genral-font-color">Communicate your message. Transmit your individuality.</p>
+	  				<p class="genral-font-color">If you’re looking for help reaching and converting your target audience into long-term customers, you’ve come to the right place! Our digital marketing services encompass everything from social media to SEO, from copywriting to landing page creation, from video production to influencer marketing.</p>
+	  				<p class="genral-font-color">You have a niche product and you want it to be found by your specific clientele. We are versatile and experienced at working in numerous industries. First, we will research your target market. Then we will create and execute a tailor-made marketing strategy to gain the results you need to not just be found, but to be loved by your future customers for years to come!</p>
+	  				<a class="links-general-slide-right blue-button" href="#">EXPLORE EXISTING PROJECTS</a>
+  				</div>
+  				
+  			</div>
   		</div>
   	</div>
 	  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
