add SEO section

--- a/services.html
+++ b/services.html
@@ -125,8 +125,22 @@
 	  				<p class="genral-font-color">If you’re looking for help reaching and converting your target audience into long-term customers, you’ve come to the right place! Our digital marketing services encompass everything from social media to SEO, from copywriting to landing page creation, from video production to influencer marketing.</p>
 	  				<p class="genral-font-color">You have a niche product and you want it to be found by your specific clientele. We are versatile and experienced at working in numerous industries. First, we will research your target market. Then we will create and execute a tailor-made marketing strategy to gain the results you need to not just be found, but to be loved by your future customers for years to come!</p>
 	  				<a class="links-general-slide-right blue-button" href="#">EXPLORE EXISTING PROJECTS</a>
-  				</div>
-  				
+  				</div> 				
+  			</div>
+  			<div class="col-md-6 d-md-none">
+  				<img class="img-responsive" src="https://res.cloudinary.com/it-s-tech/image/upload/v1593506422/Group-Itstech/advertising-alphabet-business-communication-270637_rcq4e5.jpg" style="width: 100%;">
+  			</div>
+  			<div class="col-md-6 d-flex align-items-center mb-4">
+  				<div>
+  					<h2 class="heading-standout pt-4">SEO and ASO</h2>
+  				<p class="genral-font-color">You have a winning product or service. You have the quality content to match. But how easy is it for your target audience to find you?</p>
+  				<p class="genral-font-color">Tap into Scopic’s SEO and ASO services to adopt leading best practices that will help dramatically increase your web traffic or number of downloads, and in turn, boost sales.</p>
+  				<p class="genral-font-color">Whether it’s a technical SEO audit for your website, or a killer marketing strategy that will get your application found, we can help you implement the latest SEO and ASO best practices to stand out in all that online noise and make your way to the top.</p>
+  				<a class="links-general-slide-right blue-button" href="#">EXPLORE EXISTING PROJECTS</a>
+  				</div>  				
+  			</div>
+  			<div class="col-md-6 d-none d-md-block">
+  				<img class="img-responsive" src="https://res.cloudinary.com/it-s-tech/image/upload/v1593506422/Group-Itstech/advertising-alphabet-business-communication-270637_rcq4e5.jpg" style="width: 100%;">
   			</div>
   		</div>
   	</div>
