add consultation section

--- a/services.html
+++ b/services.html
@@ -142,6 +142,17 @@
   			<div class="col-md-6 d-none d-md-block">
   				<img class="img-responsive" src="https://res.cloudinary.com/it-s-tech/image/upload/v1593506422/Group-Itstech/advertising-alphabet-business-communication-270637_rcq4e5.jpg" style="width: 100%;">
   			</div>
+  			<div class="col-md-6">
+  				<img class="img-responsive" src="https://res.cloudinary.com/it-s-tech/image/upload/v1593510478/Group-Itstech/person-in-black-pants-and-black-shoes-sitting-on-brown-4101143_pd5nwf.jpg" style="width: 100%;">
+  			</div>
+  			<div class="col-md-6 d-flex align-items-center mb-4">
+  				<div>
+  					<h2 class="heading-standout pt-4">Consulting</h2>
+  				<p class="genral-font-color">Do you have great ideas, but little time to research? Or perhaps you just want a little guidance on best practices to follow?</p>
+  				<p class="genral-font-color">Our software developers, designers and marketers are always around to advise you on the best actions to take. In addition to our custom software development services and our digital marketing solutions, we also provide consultancy services in every area of our expertise. So whatever the challenge, from software, to design, to marketing, we can guide you along the path of success and together make sure you reach your goals.</p>
+  				<a class="links-general-slide-right blue-button" href="#">EXPLORE EXISTING PROJECTS</a>
+  				</div>  				
+  			</div>
   		</div>
   	</div>
 	  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
